# rinside

./: .Rbuildignore  .travis.yml  ChangeLog  DESCRIPTION  NAMESPACE  README.md  cleanup  configure  configure.win  doxyfile
.github/workflows/: ci.yaml
R/: RInsidePaths.R  RcppExports.R  zzz.R
inst/: ChangeLog  NEWS  NEWS.Rd  THANKS
inst/doc/html/: MemBuf_8cpp.html  MemBuf_8cpp__incl.map  MemBuf_8cpp__incl.md5  MemBuf_8cpp_source.html  MemBuf_8h.html  MemBuf_8h__dep__incl.map  MemBuf_8h__dep__incl.md5  MemBuf_8h_source.html  RInside_8cpp.html  RInside_8cpp__incl.map  RInside_8cpp__incl.md5  RInside_8cpp_source.html  RInside_8h.html  RInside_8h__dep__incl.map  RInside_8h__dep__incl.md5  RInside_8h__incl.map  RInside_8h__incl.md5  RInside_8h_source.html  annotated.html  classMemBuf-members.html  classMemBuf.html  classMemBuf__coll__graph.map  classMemBuf__coll__graph.md5  classMemBuf_a98a5b5de27fb73dd3433773b825faf21_cgraph.map  classMemBuf_a98a5b5de27fb73dd3433773b825faf21_cgraph.md5  classRInside-members.html  classRInside.html  classRInside__coll__graph.map  classRInside__coll__graph.md5  classRInside_a4cf10e78fb73bfda699f921c28e6b985_cgraph.map  classRInside_a4cf10e78fb73bfda699f921c28e6b985_cgraph.md5  classRInside_a9f18dc5011e1e32a52360b3d88f9bab7_cgraph.map  classRInside_a9f18dc5011e1e32a52360b3d88f9bab7_cgraph.md5  classRInside_aeecbfd63737539d1731b2f38852b3751_cgraph.map  classRInside_aeecbfd63737539d1731b2f38852b3751_cgraph.md5  classes.html  files.html  functions.html  functions_func.html  functions_type.html  (+10 more)
inst/doc/latex/: MemBuf_8cpp.tex  MemBuf_8cpp__incl.eps  MemBuf_8cpp__incl.md5  MemBuf_8h.tex  MemBuf_8h__dep__incl.eps  MemBuf_8h__dep__incl.md5  RInside_8cpp.tex  RInside_8cpp__incl.eps  RInside_8cpp__incl.md5  RInside_8h.tex  RInside_8h__dep__incl.eps  RInside_8h__dep__incl.md5  RInside_8h__incl.eps  RInside_8h__incl.md5  annotated.tex  classMemBuf.tex  classMemBuf__coll__graph.eps  classMemBuf__coll__graph.md5  classMemBuf_a98a5b5de27fb73dd3433773b825faf21_cgraph.eps  classMemBuf_a98a5b5de27fb73dd3433773b825faf21_cgraph.md5  classRInside.tex  classRInside__coll__graph.eps  classRInside__coll__graph.md5  classRInside_a4cf10e78fb73bfda699f921c28e6b985_cgraph.eps  classRInside_a4cf10e78fb73bfda699f921c28e6b985_cgraph.md5  classRInside_a9f18dc5011e1e32a52360b3d88f9bab7_cgraph.eps  classRInside_a9f18dc5011e1e32a52360b3d88f9bab7_cgraph.md5  classRInside_aeecbfd63737539d1731b2f38852b3751_cgraph.eps  classRInside_aeecbfd63737539d1731b2f38852b3751_cgraph.md5  doxygen.sty  files.tex  refman.tex  structMemBuf_1_1membuf__st.tex
inst/examples/: Makefile  rinside_sample0.cpp  rinside_sample1.cpp  rinside_sample2.cpp  rinside_sample3.cpp  rinside_sample4.cpp  rinside_sample5.cpp  rinside_sample8.cpp  rinside_test0.cpp  rinside_test1.cpp
inst/examples/armadillo/: Makefile  rinside_arma0.cpp  rinside_arma1.cpp
inst/examples/c_interface/: Makefile  hello.c  hello.rb  passdata.c  passdata.rb
inst/examples/eigen/: Makefile
inst/examples/mpi/: Makefile  (+4 more)
inst/examples/qt/cmake/: CMakeLists.txt
inst/include/: RInside.h  RInsideCommon.h  RInside_C.h
inst/lib/: RInside.h
local/: runDoxygen
man/: RInside-package.Rd
src/: Callbacks.h  Makefile  Makefile.win  Makevars  Makevars.win  MemBuf.cpp  MemBuf.h  RInside.cpp  RInside.h  RInsideAutoloads.h  RInsideCommon.h  RInsideEnvVars.h  RInside_C.cpp  RcppExports.cpp  compiler.cpp  setenv.c
src/tools/: RInsideEnvVars.r
(+59 files in other folders)
